; ModuleID = '/home/carl/AnghaBench/linux/drivers/leds/extr_leds-lp5523.c_store_master_fader.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/leds/extr_leds-lp5523.c_store_master_fader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.lp55xx_led = type { %struct.lp55xx_chip* }
%struct.lp55xx_chip = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@LP5523_REG_MASTER_FADER_BASE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*, i64, i32)* @store_master_fader to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @store_master_fader(%struct.device* %0, %struct.device_attribute* %1, i8* %2, i64 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.device*, align 8
  %8 = alloca %struct.device_attribute*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.lp55xx_led*, align 8
  %13 = alloca %struct.lp55xx_chip*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %7, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %8, align 8
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32 %4, i32* %11, align 4
  %16 = load %struct.device*, %struct.device** %7, align 8
  %17 = call i32 @to_i2c_client(%struct.device* %16)
  %18 = call %struct.lp55xx_led* @i2c_get_clientdata(i32 %17)
  store %struct.lp55xx_led* %18, %struct.lp55xx_led** %12, align 8
  %19 = load %struct.lp55xx_led*, %struct.lp55xx_led** %12, align 8
  %20 = getelementptr inbounds %struct.lp55xx_led, %struct.lp55xx_led* %19, i32 0, i32 0
  %21 = load %struct.lp55xx_chip*, %struct.lp55xx_chip** %20, align 8
  store %struct.lp55xx_chip* %21, %struct.lp55xx_chip** %13, align 8
  %22 = load i8*, i8** %9, align 8
  %23 = call i64 @kstrtoul(i8* %22, i32 0, i64* %15)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %5
  %26 = load i32, i32* @EINVAL, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %6, align 4
  br label %57

28:                                               ; preds = %5
  %29 = load i64, i64* %15, align 8
  %30 = icmp ugt i64 %29, 255
  br i1 %30, label %31, label %34

31:                                               ; preds = %28
  %32 = load i32, i32* @EINVAL, align 4
  %33 = sub nsw i32 0, %32
  store i32 %33, i32* %6, align 4
  br label %57

34:                                               ; preds = %28
  %35 = load %struct.lp55xx_chip*, %struct.lp55xx_chip** %13, align 8
  %36 = getelementptr inbounds %struct.lp55xx_chip, %struct.lp55xx_chip* %35, i32 0, i32 0
  %37 = call i32 @mutex_lock(i32* %36)
  %38 = load %struct.lp55xx_chip*, %struct.lp55xx_chip** %13, align 8
  %39 = load i64, i64* @LP5523_REG_MASTER_FADER_BASE, align 8
  %40 = load i32, i32* %11, align 4
  %41 = sext i32 %40 to i64
  %42 = add nsw i64 %39, %41
  %43 = sub nsw i64 %42, 1
  %44 = load i64, i64* %15, align 8
  %45 = trunc i64 %44 to i32
  %46 = call i32 @lp55xx_write(%struct.lp55xx_chip* %38, i64 %43, i32 %45)
  store i32 %46, i32* %14, align 4
  %47 = load %struct.lp55xx_chip*, %struct.lp55xx_chip** %13, align 8
  %48 = getelementptr inbounds %struct.lp55xx_chip, %struct.lp55xx_chip* %47, i32 0, i32 0
  %49 = call i32 @mutex_unlock(i32* %48)
  %50 = load i32, i32* %14, align 4
  %51 = icmp eq i32 %50, 0
  br i1 %51, label %52, label %55

52:                                               ; preds = %34
  %53 = load i64, i64* %10, align 8
  %54 = trunc i64 %53 to i32
  store i32 %54, i32* %14, align 4
  br label %55

55:                                               ; preds = %52, %34
  %56 = load i32, i32* %14, align 4
  store i32 %56, i32* %6, align 4
  br label %57

57:                                               ; preds = %55, %31, %25
  %58 = load i32, i32* %6, align 4
  ret i32 %58
}

declare dso_local %struct.lp55xx_led* @i2c_get_clientdata(i32) #1

declare dso_local i32 @to_i2c_client(%struct.device*) #1

declare dso_local i64 @kstrtoul(i8*, i32, i64*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @lp55xx_write(%struct.lp55xx_chip*, i64, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
